[package]

name = "common"
version = "0.1.0"
authors = [ "Andrew Hobden <andrew@hoverbear.org>", ]

[dependencies]
iron = "*"
urlencoded = "*"
logger = "*"
router = "*"
mount = "*"
persistent = "*"
staticfile = "*"
session = "*"
cookie = "*"
bodyparser = "*"
diesel = { version = "*", features = ['sqlite'] }
diesel_codegen = { version = "*", features = ["sqlite"] }
r2d2 = "*"
r2d2-diesel = { version = "*", features = ['sqlite'] }
dotenv = "*"
dotenv_macros = "*"
